--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
+    "@upstash/context7-mcp": "^2.1.1",
     "@vitejs/plugin-react": "^5.1.4",
     "autoprefixer": "^10.4.24",
     "postcss": "^8.5.6",
-    "shadcn": "^3.8.4",
+    "shadcn": "^3.8.5",
     "sharp": "^0.34.5",
     "tailwindcss": "^4.1.18",
     "vite": "^7.3.1"
